--- a/FE/deepgu/app/globals.css
+++ b/FE/deepgu/app/globals.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
 
-:root {
+@theme {
   /* 기본 하얀색 */
   --code-theme1: #ffffff;
   --code-theme2: #f5f5f5;
@@ -14,13 +14,13 @@
   --code-theme9: #000000;
 
   /* 포인트 컬러 */
-  --code-theme10: #5D9AFE;
-  --code-theme11: #FF8989;
+  --code-theme10: #5d9afe;
+  --code-theme11: #ff8989;
   --code-theme12: #ef4667;
   --code-theme13: #fae100;
 
   /* 파스텔 컬러 */
-  --code-theme14: #4C5562;
+  --code-theme14: #4c5562;
   --code-theme15: #788495;
 
   /* 위 색상 재정의 */
@@ -41,10 +41,9 @@
 
   --color-Gray: var(--code-theme14);
   --color-Semi-Gray: var(--code-theme15);
-
 }
 
-:root {
+@theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -218,14 +217,14 @@ body {
   overflow: hidden;
 }
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
 
 @layer utilities {
   .bg-page-gradient {
