📌 Feat    : CCTV 페이지 컴포넌트 퍼블리싱

--- a/FE/deepgu/app/globals.css
+++ b/FE/deepgu/app/globals.css
@@ -16,7 +16,7 @@
   /* 포인트 컬러 */
   --code-theme10: #5d9afe;
   --code-theme11: #ff8989;
-  --code-theme12: #ef4667;
+  --code-theme12: #7fb5ff;
   --code-theme13: #fae100;
 
   /* 파스텔 컬러 */
