--- a/FE/deepgu/app/globals.css
+++ b/FE/deepgu/app/globals.css
@@ -22,6 +22,7 @@
   /* 파스텔 컬러 */
   --code-theme14: #4c5562;
   --code-theme15: #788495;
+  --code-theme16: #ef4444;
 
   /* 위 색상 재정의 */
   --color-white: var(--code-theme1);
@@ -41,6 +42,7 @@
 
   --color-Gray: var(--code-theme14);
   --color-Semi-Gray: var(--code-theme15);
+  --color-Alert-Red: var(--code-theme16);
 }
 
 @theme inline {
